Align fixes

--- a/10/css/slider.css
+++ b/10/css/slider.css
@@ -3,17 +3,20 @@
   border-radius: 10px;
   transition: linear;
   width: 900px;
+  vertical-align: middle;
 }
 
 @media (max-width: 1450px) {
   .slide_img{
     width: 700px;
+    margin-top: 50px;
   }
 }
 
 @media (max-width: 1200px) {
   .slide_img{
     width: 600px;
+    margin-top: 80px;
   }
 }
 
