--- a/10/css/styles.css
+++ b/10/css/styles.css
@@ -129,6 +129,7 @@ option{
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  vertical-align: middle;
 }
 
 .gradientPromo{
